tests/baselines/reference/for-of31.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of31.ts(14,15): error TS2322: Type '_StringIterator' is not assignable to type 'Iterable<string>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => _StringIterator' is not assignable to type '() => Iterator<string>'.
      Type '_StringIterator' is not assignable to type 'Iterator<string>'.
        Types of property 'next' are incompatible.
          Type '() => { value: string; }' is not assignable to type '(value?: any) => IteratorResult<string, string | void>'.
            Type '{ value: string; }' is not assignable to type 'IteratorResult<string, string | void>'.
              Property 'done' is missing in type '{ value: string; }' but required in type 'IteratorReturnResult<string | void>'.


==== tests/cases/conformance/es6/for-ofStatements/for-of31.ts (1 errors) ====
    class _StringIterator {
        next() {
            return {
                // no done property
                value: ""
            }
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new _StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '_StringIterator' is not assignable to type 'Iterable<string>'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => _StringIterator' is not assignable to type '() => Iterator<string>'.
!!! error TS2322:       Type '_StringIterator' is not assignable to type 'Iterator<string>'.
!!! error TS2322:         Types of property 'next' are incompatible.
!!! error TS2322:           Type '() => { value: string; }' is not assignable to type '(value?: any) => IteratorResult<string, string | void>'.
!!! error TS2322:             Type '{ value: string; }' is not assignable to type 'IteratorResult<string, string | void>'.
!!! error TS2322:               Property 'done' is missing in type '{ value: string; }' but required in type 'IteratorReturnResult<string | void>'.
!!! related TS2728 /.ts/lib.es2015.iterable.d.ts:37:5: 'done' is declared here.